--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,13 @@
 {
-  "extends": "next/core-web-vitals"
+  "env": {
+    "browser": true,
+    "jest/globals": true
+  },
+  "extends": ["next", "prettier", "plugin:jest/recommended"],
+  "plugins": ["react", "jest"],
+  "rules": {
+    "no-unused-vars": 2,
+    "@next/next/no-img-element": 0,
+    "react-hooks/exhaustive-deps": 0
+  }
 }
